--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 html {
   box-sizing: border-box;
   font-family: "Asap Condensed", sans-serif;
@@ -7,4 +13,46 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+}
+
+.hover-box {
+  position: relative;
+  overflow: hidden;
+  text-decoration: none;
+  color: #fff;
+}
+
+.hover-box h2 {
+  position: absolute;
+  bottom: -4em;
+  width: 5%;
+  padding: 1rem;
+  margin: 0;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
+  transition: all .2s linear;
+}
+
+.hover-box:hover h2,
+.hover-box:focus h2 {
+  bottom: 0;
+}
+
+.hover-box img {
+  filter: grayscale(100%);
+  transition: all .2s linear;
+  width: 100%;
+  display: block;
+}
+
+.hover-box:hover img,
+.hover-box:focus img {
+  filter: grayscale(0);
+  transform: scale(1.1);
 }
